# projectboard

./: .dockerignore  .gitignore  AWS_OIDC_SETUP.md  Dockerfile  OIDC_DOCUMENTATION_INDEX.md  README.md  docker-compose.yml  env.example  pyproject.toml
.github/: OIDC_QUICK_START.md  OIDC_SETUP_CHECKLIST.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-example.yml.disabled
app/: main.py  models.py  session.py
app/api/routers/: __init__.py  auth.py  document.py  project.py
app/core/: config.py  deps.py  errors.py  security.py  storage_s3.py
app/db/: init.sql  session.py
app/db/models/: __init__.py  document.py  project.py  project_access.py  user.py
app/migrations/: env.py
app/migrations/versions/: 6bf89a0d1c60_init_schema.py
app/schemas/: __init__.py  auth.py  document.py  project.py
app/services/: auth.py  document.py  project.py
app/tests/: conftest.py  test_auth_unit.py  test_documents_list_get.py  test_project_unit.py  test_project_unit_errors.py
lambdas/s3_size_updater/: Dockerfile  handler.py
